<resources>
    <string name="app_name">Sesión Asamblea</string>
    <string name="appNameLogin">SESIÓN ASAMBLEA</string>
    <string name="login">Entrar</string>
    <string name="No_Register">No. Registro</string>
    <string name="No_Folio">No. Folio</string>
    <string name="image">Imagen</string>
    <string name="textMain1">Estimados diputados, gracias a la colaboración de la Asamblea Nacional de Vietnam, contamos hoy con estos soportes informáticos. Su empleo nos permitirá contar con nuevas prestaciones para el ejercicio de nuestras funciones, así como un ahorro considerable de recursos materiales. Es muestra del proceso de informatización que se desarrolla en la Asamblea Nacional del Poder Popular y en nuestra sociedad.</string>
    <string name="textMain2">Esta herramienta ha sido creada con un diseño sencillo, de conjunto con la Empresa de Aplicaciones Informáticas (DESOFT). Es un sistema que centra su funcionamiento en la digitalización y tramitación de los documentos que se van a analizar en las sesiones de la Asamblea Nacional. Es nuestro propósito seguir perfeccionándolo, a partir de las ventajas que ofrece la informatización.</string>
    <string name="textMain3">Hoy cumplimos uno de nuestros sueños, iniciamos el camino en la digitalización de nuestras sesiones.</string>
    <string name="lorem">Estimados diputados, gracias a la colaboración de la Asamblea Nacional de VietNam, contamos hoy con estos soportes informáticos.\nSu empleo nos permitirá contar con nuevas prestaciones para el ejercicio de nuestras funciones, así como un ahorro considerable de recursos materiales. Es muestra del proceso de informatización que se desarrolla en la Asamblea Nacional del Poder Popular y en nuestra sociedad.\nEsta herramienta ha sido creada con un diseño sencillo, de conjunto con la Empresa de Aplicaciones Informáticas (DESOFT). Es un sistema que centra su funcionamiento en la digitalización y tramitación de los documentos que se van a analizar en las sesiones de la Asamblea Nacional.\nEs nuestro propósito seguir perfeccionándolo, a partir de las ventajas que ofrece la informatización.\nHoy cumplimos uno de nuestros sueños, iniciamos el camino en la digitalización de nuestras sesiones.\n<i>(Esteban Lazo Hernández)</i></string>
    <string name="lorem3">La APK cuenta con varias ventanas para interactuar.  En la de autenticación cada diputado debe ingresar el Número de Registro y Número de Folio en los campos correspondientes, luego presiona el botón de Entrar y de esta manera queda registrada la asistencia, a la vez que permite el acceso a la ventana principal. En esta se encuentran los datos del Diputado y un texto del Presidente de la ANPP.</string>
    <string name="lorem2">De ahí puede acceder a la de Documentos, que contiene los documentos que se consultarán en el plenario, los que puede descargar y acotar fragmentos de interés. Otra de las funcionalidades de esta ventana es la opción Mis notas, que facilitará escribir notas generales.</string>
    <string name="about_text">Es una aplicación desarrollada por la empresa DESOFT, de conjunto con la Asamblea Nacional del Poder Popular</string>
    <string name="description">Descripción</string>
    <string name="about">Acerca de</string>
    <string name="assistance">Asistencia</string>
    <string name="signoff">Cerrar sesión</string>
    <string name="phone">Teléfono</string>
    <string name="visit_us_at"></string>
    <string name="write_to">Escriba a</string>
    <string name="desoft_website"><u></u></string>
    <string name="desoft_email"><u>p-sesiones@anpp.gob.cu</u></string>
    <string name="title_activity_document">Document</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="failed_authentication">Autenticación Fallida</string>
    <string name="no_connection">No tiene conexión al Sistema de Autenticación</string>
    <string name="must_fill_fields">Debe llenar todos los campos</string>
    <string name="auth_success">Autenticación Exitosa</string>
</resources>