<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutAboutActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAboutActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/PopupTheme"
            app:title="@string/about"
            app:titleTextColor="@android:color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayoutAboutActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logoasamblea_color" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDescription"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/description"
                android:textSize="@dimen/normal_textView_size"
                app:layout_constraintEnd_toEndOf="@+id/imageView7"
                app:layout_constraintStart_toStartOf="@+id/imageView7"
                app:layout_constraintTop_toBottomOf="@+id/textViewAppVersion"
                app:rippleColor="@color/primary"
                app:strokeColor="@color/primary" />

            <TextView
                android:id="@+id/textViewAppVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Versión 1.0"
                android:textColor="@color/gray"
                android:textSize="@dimen/normal_textView_size"
                app:layout_constraintEnd_toEndOf="@+id/imageView7"
                app:layout_constraintStart_toStartOf="@+id/imageView7"
                app:layout_constraintTop_toBottomOf="@+id/imageView7" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/about_text"
                android:textAlignment="center"
                android:textSize="@dimen/normal_textView_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnDescription" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/visit_us_at"
                android:textSize="@dimen/normal_textView_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textViewDESOFTSiteWeb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desoft_website"
                android:textSize="@dimen/normal_textView_size"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/write_to"
                android:textSize="@dimen/normal_textView_size"
                app:layout_constraintEnd_toEndOf="@+id/textViewDESOFTSiteWeb"
                app:layout_constraintStart_toStartOf="@+id/textViewDESOFTSiteWeb"
                app:layout_constraintTop_toBottomOf="@+id/textViewDESOFTSiteWeb" />

            <TextView
                android:id="@+id/textViewDESOFTEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desoft_email"
                android:textSize="@dimen/normal_textView_size"
                app:layout_constraintEnd_toEndOf="@+id/textView8"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="@dimen/normal_textView_size"
                app:layout_constraintEnd_toEndOf="@+id/textViewDESOFTEmail"
                app:layout_constraintStart_toStartOf="@+id/textViewDESOFTEmail"
                app:layout_constraintTop_toBottomOf="@+id/textViewDESOFTEmail" />

            <TextView
                android:id="@+id/textViewDESOFTPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+53 78694200"
                android:textSize="@dimen/medium_textView_size"
                app:layout_constraintEnd_toEndOf="@+id/textView10"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Copyrigth 2004-2022 DESOFT Todos los derechos reservados"
                android:textAlignment="center"
                android:textSize="@dimen/normal_textView_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/textView12"
                app:layout_constraintEnd_toStartOf="@+id/guideline10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDESOFTPhone"
                app:srcCompat="@drawable/logo_desoft" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/textView12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline10"
                app:layout_constraintTop_toBottomOf="@+id/textViewDESOFTPhone"
                app:srcCompat="@drawable/logo_entumovil" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>