<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutMainActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarMainActivity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:baselineAligned="false"
            app:logo="@mipmap/ic_logo"
            app:popupTheme="@style/PopupTheme"
            app:subtitle="Poder Popular"
            app:subtitleTextAppearance="@style/TextAppearance.AppCompat.Body2"
            app:subtitleTextColor="@android:color/white"
            app:title="Asamblea Nacional"
            app:titleMarginStart="30dp"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Body2"
            app:titleTextColor="@android:color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:layout_alignParentBottom="true"
        app:srcCompat="@drawable/capitolio_transparente" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBarLayoutMainActivity"
        android:layout_marginBottom="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <TextView
                android:id="@+id/txtViewDeputyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:text="Saint Carlo Borromeo"
                android:textColor="@color/red"
                android:textSize="@dimen/directorName_textView_size" />


            <TextView
                android:id="@+id/txtViewDeputyRegisterNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="120"
                android:textColor="@color/primary"
                android:textSize="@dimen/directorName_textView_size" />


            <TextView
                android:id="@+id/txtViewDeputyAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_location"
                android:drawablePadding="10dp"
                android:text="Playa, La Habana"
                android:textColor="@color/primary"
                android:textSize="@dimen/normal_textView_size" />


            <TextView
                android:id="@+id/txtViewDeputyOrganization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_maletin"
                android:drawablePadding="10dp"
                android:text="MICONS"
                android:textColor="@color/primary"
                android:textSize="@dimen/normal_textView_size" />


            <TextView
                android:id="@+id/txtViewDeputyDescription1"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:justificationMode="inter_word"
                android:text="@string/textMain1"
                android:textSize="@dimen/normal_textView_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView6" />

            <TextView
                android:id="@+id/txtViewDeputyDescription2"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:justificationMode="inter_word"
                android:text="@string/textMain2"
                android:textSize="@dimen/normal_textView_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView6" />

            <TextView
                android:id="@+id/txtViewDeputyDescription3"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:justificationMode="inter_word"
                android:text="@string/textMain3"
                android:textSize="@dimen/normal_textView_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView6" />

            <TextView
                android:id="@+id/txtViewDeputyDescription4"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:justificationMode="inter_word"
                android:text="Esteban Lazo Hernández"
                android:textSize="@dimen/normal_textView_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView6" />


        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Documentos a Consultar"
        android:textSize="@dimen/normal_button_textSize"
        app:cornerRadius="@dimen/normal_button_cornerRadius"
        android:layout_centerInParent="true"
       android:layout_alignParentBottom="true"
        app:rippleColor="@color/white" />


</RelativeLayout>